--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -461,6 +461,10 @@ span.more:after {
 .content_layout {
   width: 100%;
   background-color: #ffffff;
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
 
 .separateline {
